--- a/.github/ISSUE_TEMPLATE/onboard_repo.yml
+++ b/.github/ISSUE_TEMPLATE/onboard_repo.yml
@@ -13,7 +13,7 @@ body:
   - type: dropdown
     id: solution-areas
     attributes:
-      label: Related solution areas
+      label: Related solution areas (CTRL + click to select multiple)
       multiple: true
       options:
         - Infrastructure
