--- a/.github/workflows/onboard_repo.yml
+++ b/.github/workflows/onboard_repo.yml
@@ -17,6 +17,7 @@ jobs:
     #   repoUrl: ${{ fromJson(steps.parse.outputs.parsed-issue).repo-url }}
     #   solutionAreas: ${{ fromJson(steps.parse.outputs.parsed-issue).solution-areas }}
     steps:
+      - uses: actions/checkout@v4
       - name: Issue form parser
         id: parse
         uses: edumserrano/github-issue-forms-parser@v1.3.7
