Update workflow to trigger comments on issue edits as well as openings

--- a/.github/workflows/onboard_repo.yml
+++ b/.github/workflows/onboard_repo.yml
@@ -34,7 +34,7 @@ jobs:
           echo '${{ steps.parse.outputs.parsed-issue }}'
 
       - name: Comment with inputs
-        if: github.event.action == 'opened'
+        if: github.event.action == 'opened' || github.event.action == 'edited'
         uses: peter-evans/create-or-update-comment@v3.0.2
         with:
           issue-number: ${{ github.event.issue.number }}
