Ensure required validation for solution areas in onboarding template

--- a/.github/ISSUE_TEMPLATE/onboard_repo.yml
+++ b/.github/ISSUE_TEMPLATE/onboard_repo.yml
@@ -22,3 +22,5 @@ body:
         - label: Modern Workplace
         - label: Dynamics 365
         - label: Other
+    validations:
+      required: true
