--- a/.github/workflows/onboard_repo.yml
+++ b/.github/workflows/onboard_repo.yml
@@ -55,11 +55,48 @@ jobs:
             **Next steps:**
             ⏭️ The repository is being added to the Belux Engineering Experience community. You will be notified when the process is finished.
 
-  add-repo-to-community:
+  url-validator:
     if:
       contains(github.event.issue.labels.*.name, 'Onboarding') &&
       (github.event.action == 'opened' || github.event.action == 'edited')
     needs: parse-issue
+    runs-on: ubuntu-latest
+    steps:
+      - name: Validate URL
+        run: |
+          import requests
+
+          repo_url = "${{ needs.parse-issue.outputs.repoUrl }}"
+          response = requests.get(repo_url)
+
+          if response.status_code != 200:
+            raise Exception(f"Invalid URL: {repo_url}")
+
+        shell: python
+      - name: Comment with success message
+        uses: peter-evans/create-or-update-comment@v3.0.2
+        if: failure()
+        with:
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            **⛔ Error: the provided URL is invalid or not public!**
+            Please, update the issue with a valid URL.
+      - name: Comment with success message
+        uses: peter-evans/create-or-update-comment@v3.0.2
+        if: success()
+        with:
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            **✅ Repository URL is valid!**
+
+            Next step:
+            ⏭️ Adding the repository to the Belux Engineering Experience community. You will be notified when the process is finished.
+
+  add-repo-to-community:
+    if:
+      contains(github.event.issue.labels.*.name, 'Onboarding') &&
+      (github.event.action == 'opened' || github.event.action == 'edited')
+    needs: ["parse-issue", "url-validator"]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -81,13 +118,6 @@ jobs:
             "dynamics-365": "${{ fromJson(needs.parse-issue.outputs.solutionAreas).dynamics-365 }}",
             "other": "${{ fromJson(needs.parse-issue.outputs.solutionAreas).other }}"
           }
-
-
-
-          response = requests.get(repo_url)
-          if response.status_code != 200:
-            raise Exception(f"The repository link {repo_url} is invalid. HTTP status code: {response.status_code}")
-
 
           file_path = "repo-urls.csv"
           updated = False
@@ -192,13 +222,6 @@ jobs:
 
             Check the workflow run for detailed information: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
-      - name: Get failre message
-
-        run: |
-          gh auth login 
-          gh run view ${{ github.run_id }} -R ${{ github.repository }}
-          echo "[INFO]: Logs from failed job are found below"
-          gh run view ${{ github.run_id }} --log-failed -R ${{ github.repository }}
       - name: Label failure
         uses: actions/github-script@v6
         with:
