--- a/.github/workflows/generate_readme.yml
+++ b/.github/workflows/generate_readme.yml
@@ -2,7 +2,9 @@
 name: 🚧 Generate README
 on:
   workflow_dispatch:
-
+permissions:
+  contents: write
+  
 jobs:
   generate-readme:
     runs-on: ubuntu-latest
