--- a/.github/workflows/generate_readme.yml
+++ b/.github/workflows/generate_readme.yml
@@ -2,6 +2,10 @@
 name: 🚧 Generate README
 on:
   workflow_dispatch:
+  workflow_run:
+    workflows: "⛵ Onboard repo"
+    types: [completed]
+    
 permissions:
   contents: write
   
