--- a/.github/ISSUE_TEMPLATE/onboard_repo.yml
+++ b/.github/ISSUE_TEMPLATE/onboard_repo.yml
@@ -6,7 +6,7 @@ body:
   - type: input
     id: repo-url
     attributes:
-      label: Repository Url
+      label: Repository url
       description: URL of you public repository
     validations:
       required: true
